<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".confirmarDatos"
    android:padding="@dimen/actitvity_margin"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvConfirmar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tituloConfirmar"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/sizeTitulo"
        android:layout_marginTop="@dimen/top_margin"
        />
    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:layout_marginTop="@dimen/top_margin"
        android:textSize="@dimen/sizeDato"
        />

    <TextView
        android:id="@+id/tvFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fecha"
        android:layout_marginTop="@dimen/top_margin"
        android:textSize="@dimen/sizeDato"
        />

    <TextView
        android:id="@+id/tvTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telefono"
        android:layout_marginTop="@dimen/top_margin"
        android:textSize="@dimen/sizeDato"
        />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginTop="@dimen/top_margin"
        android:textSize="@dimen/sizeDato"
        />

    <TextView
        android:id="@+id/tvDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descripcion"
        android:layout_marginTop="@dimen/top_margin"
        android:textSize="@dimen/sizeDato"
        />

    <Button
        android:id="@+id/btnEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editar"
        android:layout_marginTop="@dimen/top_margin"
        />
</LinearLayout>